--- a/sources/sass/components/_header.scss
+++ b/sources/sass/components/_header.scss
@@ -34,6 +34,7 @@ ul.navFlex li{
     color: black;
     text-decoration: none;
     font-size: 1.2em;
+    padding-left: 20px;
 }
 .dropbtn {
     width: 50px;
