--- a/sources/sass/components/_section.scss
+++ b/sources/sass/components/_section.scss
@@ -1,5 +1,8 @@
 .section{
     width: 100vw;
     height: 100vh;
-    /*https://pxhere.com/en/photo/657926*/
+}
+.section--hero{
+    background-image: url("../../images/hero.jpg");
+    background-position: top center;
 }
