added content for about us

--- a/sources/sass/app.scss
+++ b/sources/sass/app.scss
@@ -2,5 +2,7 @@
 @import 'components/reset';
 @import 'components/header';
 @import 'components/section';
+@import 'components/title';
+@import 'components/content';
 @import 'components/btn';
 @import 'components/alert';
