--- a/sources/sass/components/_section.scss
+++ b/sources/sass/components/_section.scss
@@ -5,4 +5,5 @@
 .section--hero{
     background-image: url("../../images/hero.jpg");
     background-position: top center;
+    background-attachment: fixed;
 }
