--- a/sources/sass/components/_header.scss
+++ b/sources/sass/components/_header.scss
@@ -17,13 +17,14 @@ div.logo{
     margin-top: 6px;
 }
 nav{
-    width: 25em;
+    width: 40em;
 }
 ul.navFlex{
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
     list-style: none;
+    margin-right: 20px;
 }
 ul.navFlex li{
     align-self: center;
@@ -34,7 +35,6 @@ ul.navFlex li{
     color: black;
     text-decoration: none;
     font-size: 1.2em;
-    padding-left: 20px;
 }
 .dropbtn {
     width: 50px;
