--- a/sources/sass/components/_header.scss
+++ b/sources/sass/components/_header.scss
@@ -8,6 +8,7 @@ header{
     flex-flow: row nowrap;
     justify-content: space-between;
     position: fixed;
+    z-index: 10;
 }
 div.logo{
     width: 100px;
