--- a/sources/sass/components/_section.scss
+++ b/sources/sass/components/_section.scss
@@ -1,9 +1,25 @@
 .section{
     width: 100vw;
     height: 100vh;
+    position: relative;
 }
 .section--hero{
     background-image: url("../../images/hero.jpg");
     background-position: top center;
     background-attachment: fixed;
+}
+.section--about{
+    height: 75vh;
+}
+.section--contact{
+    background-color: #ccc;
+    height: 65vh;
+}
+#about{
+    position: absolute;
+    top: -75px;
+}
+#contact{
+    position: absolute;
+    top: -75px;
 }
